gap fix

--- a/src/scss/base/buttons.scss
+++ b/src/scss/base/buttons.scss
@@ -11,8 +11,12 @@
 	justify-content: center;
 	align-self: center;
 	overflow: hidden;
-	min-width: rem(250);
+	min-width: rem(270);
 	margin: 0 auto;
+	& span {
+		display: inline-block;
+		align-self: center;
+	}
 }
 
 //-------------------custom buttons properties-------------------
@@ -24,6 +28,7 @@
 	text-transform: uppercase;
 	@include adaptiveValue("width", $button-width-pc, $button-width-mob, 1200, 320, 1);
 	@include adaptiveValue("height", $button-height-pc, $button-height-mob, 1200, 320, 1);
+	height: 100%;
 	padding: rem(0) rem(20);
 	background-color:  $background-color-button-major;
 	border-radius: 5px;
