--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -881,16 +881,24 @@
 		align-items: center;
 		justify-content: center;
 		flex-wrap: wrap;
-		@include adaptiveValue("grid-gap", 50, 10, 1200, 577, 1 );
-		&:not(:last-child) {
+		& .contacts-subscribe__call {
 			@include adaptiveValue("margin-left", 50, 10, 1200, 577, 1 );
-			@include adaptiveValue("bottom", 50, 10, 1200, 577, 1 );
+			@include adaptiveValue("margin-right", 50, 10, 1200, 577, 1 );
+			@media (max-width: $mobileSmall){
+				margin: 0 0 rem(30);
+				width: 100%;				  
+			}
+		}
+		//@include adaptiveValue("grid-gap", 50, 10, 1200, 577, 1 );
+		&:not(:last-child) {
+			//@include adaptiveValue("margin-left", 50, 10, 1200, 577, 1 );
+			//@include adaptiveValue("bottom", 50, 10, 1200, 577, 1 );
 		}
 		@media (max-width:$mobileSmall){
 			justify-content: space-around;
-			grid-row-gap: rem(50);
+			//grid-row-gap: rem(50);
 			&:not(:last-child) {
-				margin-left: rem(50);
+				//margin-left: rem(50);
 			}
 	  	}
 	}
